--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
     <h1>Name</h1>
     <p>My name is Heather Jasi</p>
+    <h2>Major</h2>
+    <p>I am majoring in Applied Technology</p>
 </body>
 </html>
