--- a/index.html
+++ b/index.html
@@ -1,9 +1,42 @@
-<html>
-<header><title>Hello World</title></header>
+<!DOCTYPE html>
+<html lang = "en-US">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0, viewpoint-fit-cover">
+    <title>WDD 230 Web Frontend Development | BYU-Idaho | Jasi</title>
+    <meta name="description" content="This is my web portal page for WDD 230 course">
+    <link rel ="icon" type="image/png" href="Heather pic.jpeg">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Laila&family=Mallanna&family=Marck+Script&display=swap">
+    <link rel="stylesheet" href="styles/styles.css">
+</head>
+
 <body>
-    <h1>Name</h1>
-    <p>My name is Heather Jasi</p>
-    <h2>Major</h2>
-    <p>I am majoring in Applied Technology</p>
+    <header>
+        <img src="images/Heather pic.jpeg" alt="Student Profile Picture">
+        <h1>Heather Noe Jasi</h1>
+    </header>
+    <main>
+        <section class="linklist">
+            <h2>WDD 230: Assignment Portal</h2>
+            <ul>
+                <li>Lesson 1: <a href="####"></a></li>
+                <li>Lesson 2: <a href="####"></a></li>
+                <li>Lesson 3: <a href="####"></a></li>
+                <li>Lesson 4: <a href="####"></a></li>
+                <li>Lesson 5: <a href="####"></a></li>
+                <li>Lesson 6: <a href="####"></a></li>
+                <li>Lesson 7: <a href="####"></a></li>
+                <li>Lesson 8: <a href="####"></a></li>
+                <li>Lesson 9: <a href="####"></a></li>
+                <li>Lesson 10: <a href="####"></a></li>
+                <li>Lesson 11: <a href="####"></a></li>
+            </ul>
+        </section>
+        <input type="text" id="q">
+    </main>
+    <footer>&copy;<span id="year"></span> .:|:. Heather Jasi .:|:. BYU-Idaho .:|:. WDD 230 - Winter 2023 .:|:. <span id="date1"></span> <span id="emessage"></span></footer>
+    <script src = "scripts/script.js"></script>
 </body>
+
+
 </html>
