--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section class="linklist">
             <h2>WDD 230: Assignment Portal</h2>
             <ul>
-                <li>Lesson 1: <a href="####"></a></li>
+                <li>Lesson 1: <a href="https://nomazulu23.github.io/wdd230/"> Portal Page</a></li>
                 <li>Lesson 2: <a href="####"></a></li>
                 <li>Lesson 3: <a href="####"></a></li>
                 <li>Lesson 4: <a href="####"></a></li>
@@ -32,7 +32,7 @@
                 <li>Lesson 11: <a href="####"></a></li>
             </ul>
         </section>
-        <input type="text" id="q">
+        <!--input type="text" id="q"-->
     </main>
     <footer>&copy;<span id="year"></span> .:|:. Heather Jasi .:|:. BYU-Idaho .:|:. WDD 230 - Winter 2023 .:|:. <span id="date1"></span> <span id="emessage"></span></footer>
     <script src = "scripts/script.js"></script>
