Week 1 Final Commit

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         </section>
         <!--input type="text" id="q"-->
     </main>
-    <footer>&copy;<span id="year"></span> .:|:. Heather Jasi .:|:. BYU-Idaho .:|:. WDD 230 - Winter 2023 .:|:. <span id="date1"></span> <span id="emessage"></span></footer>
+    <footer>&copy;<span id="year"></span> .:|:. Heather Jasi .:|:. BYU-Idaho .:|:. WDD 230 - Winter 2023 .:|:. 
+        <span id="date1"></span> <span id="emessage"></span></footer>
     <script src = "scripts/script.js"></script>
 </body>
 
