--- a/lesson_2/design-principles.html
+++ b/lesson_2/design-principles.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles2/small2.css">
     <link rel="stylesheet" href="styles2/medium2.css">
     <link rel="stylesheet" href="styles2/large2.css">
-    <link href="<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap" rel="stylesheet">" rel="stylesheet">" rel="stylesheet">
+    <link href="<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 
