--- a/lesson_2/design-principles.html
+++ b/lesson_2/design-principles.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="styles2/small2.css">
     <link rel="stylesheet" href="styles2/medium2.css">
     <link rel="stylesheet" href="styles2/large2.css">
-    <link href="<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap" >
 </head>
 
 
@@ -23,39 +23,51 @@
     <main>
 
         <section class="visual_column">
-            <h4 class="vis_title">Honey Fashion and Accessories</h4>
+            <h4 class="vis_title">Visual Hierarchy</h4>
+            <h5>Honey Fashion and Accessories</h5>
             <a href="https://www.honeyacc.co.za/">Honey Fashion</a>
-            <img class="img_vis" src="images2/Honey2.jpeg" alt="Visual Hierarchy">
+            <img class="img_vis" src="images2/Honey Acc.jpeg" alt="Visual Hierarchy">
             <p>Nielsen Norman Group noted that Summary: A clear visual hierarchy guides the eye to the most important elements on the page.
             It can be created through variations in color and contrast, scale, and grouping. A website with a good visual design
             allows the user to have a clear sense of direction. The eye is guided to consume each different elements. 
-        Good visual hierarchy can be created using, color and contract, scale and grouping. The Honey Fashion and Accessories
-        makes use of color and contrast. The colors used grab attention. The use of lighter and darker colors balance each other.
-        The title and the heading are in bold and lighter color grabing attention and the information is in smaller font size and darker. 
-        The sizes of font provide enough variety to clearly see the headings and text content. The title is the largest, the headings are 
-        medium size and the text content is smaller. This keeps the hierarchical relationship well defined and clear. 
+            Good visual hierarchy can be created using, color and contract, scale and grouping. The Honey Fashion and Accessories
+            makes use of color and contrast. The colors used grab attention. The use of lighter and darker colors balance each other.
+            The title and the heading are in bold and lighter color grabing attention and the information is in smaller font size and darker. 
+            The sizes of font provide enough variety to clearly see the headings and text content. The title is the largest, the headings are 
+            medium size and the text content is smaller. This keeps the hierarchical relationship well defined and clear. 
     </p>
         </section>
 
         <section class="whitespace_column">
-            <h4 class="wht_title">Water Works</h4>
+            <h4 class="wht_title">White Space and Clean Design</h4>
+            <h5>Water Works</h5>
             <a href="https://www.waterworks.com/us_en/">Water Works</a>
-            <img class="img_wht" src="images2/Water Works.jpeg" alt="White Space and Clean">
+            <img class="img_wht" src="images2/WaterWorks.jpeg" alt="White Space and Clean">
             <p>White Space and Clean Design allows the design to breathe by reducing too much text and funstional elements that the user 
                 interacts with. The beauty of white space and clean design is that is make text to be clear and readable. It also guides
                 the eye. According to Nick Babich he noted that White space has a tremendous impact on how people comprehend information
                 because content relationships are defined by surrounding negative space. The water works website looks clean and neat. 
                 The white space clearly brings our the beautiful design. The page is not too busy. We see the connection of the title and the 
                 headings. White space drive user's attention to a particular object. In this case, the website drives the user to pay attention 
-                to the images of the beautiful taps without having to worry about reading alot of text. 
+                to the images of the beautiful tub without having to worry about reading alot of text. In Water works website, there is use 
+                of two colours to achive a clean look of the page. The white and light grey give attention to the picture and text content.  
             </p>
         </section>
 
         <section class="repetition_column">
-            <h4 class="rep_title">Simple Recipes </h4>
-            <a href="https://www.simplyrecipes.com/">Simple Recipes</a>
-            <img class="img_rep" src="images2/Simply Recipes.jpeg" alt="Repetition">
-            <p>Repetition.</p>
+            <h4 class="rep_title">Repetition</h4>
+            <h5>Family Dinners</h5>
+            <a href="https://www.familydinners.com/">Family Dinners</a>
+            <img class="img_rep" src="images2/Family Dinners.jpeg" alt="Repetition">
+            <p>Study.com highlights that the repetition principle of design means that the same or similar elements are used again. 
+                The principle of repetition in design is used to achieve consistency and uniqueness.It simply means that pictorial elements
+                are completely or partially reused. These can be the same or similar colors in the design,
+                the use of the same or similar lines, fonts, sizes, and textures, or certain shapes of elements.
+                The Family Dinners website makes of repetition, the pictures are the same size. The title of each picture 
+                is on the left side, written in capital letters with a grey background. There is consistance as the same font size, font style and 
+                image sizes are being reused. The colors used also show repetition, there is use of warm colors that match. The top website banner
+                has a similar color with the food on images used. That achieves consistency and uniqueness. 
+            </p>
         </section>
 
     </main>
