--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="lesson-list">
                 <ul>
                     <li>Lesson 1: <a href="https://codepen.io/nomazulu23/pen/abjVrXe"> Applied JavaScript</a></li>
-                    <li>Lesson 2: <a href="http://127.0.0.1:5500/lesson_2/design-principles.html"> Design Principles</a></li>
+                    <li>Lesson 2: <a href="lesson_2/design-principles.html"> Design Principles</a></li>
                     <li>Lesson 3: <a href="####"></a></li>
                     <li>Lesson 4: <a href="####"></a></li>
                     <li>Lesson 5: <a href="####"></a></li>
