--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -28,7 +31,7 @@
                 <ul>
                     <li>Lesson 1: <a href="https://codepen.io/nomazulu23/pen/abjVrXe"> Applied JavaScript</a></li>
                     <li>Lesson 2: <a href="lesson_2/design-principles.html"> Design Principles</a></li>
-                    <li>Lesson 3: <a href="####"></a></li>
+                    <li>Lesson 3: <a href="lesson_3/index_CoC_.html"> Chamber of Commerce </a></li>
                     <li>Lesson 4: <a href="####"></a></li>
                     <li>Lesson 5: <a href="####"></a></li>
                     <li>Lesson 6: <a href="####"></a></li>
@@ -40,12 +43,13 @@
                 </ul>
             </div>
         </section>
-        <!--input type="text" id="q"-->
+       
     </main>
 
     <footer> 
-        <p>&copy;<span id="year"></span> .:|:. Heather Jasi .:|:. Lublin </p>
-        <span id="date"></span> 
+        <p>&copy;<span id="year"></span> .:|:. Heather Jasi .:|:. Lublin 
+        <br>
+        <span id="date"></span> </p>
     </footer>
 
     <script src = "scripts/script.js"></script>
