--- a/lesson_2/design-principles.html
+++ b/lesson_2/design-principles.html
@@ -7,25 +7,24 @@
     <meta name="description" content="This is a web page on design principles, it will focus on Visual Hierarchy, Repetition and White Space and Clean Design">
     <link rel="icon" type="image/png" href="Heather pic.jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="styles2/main2.css">
-    <link rel="stylesheet" href="styles2/small2.css">
-    <link rel="stylesheet" href="styles2/medium2.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap" >
+    <link rel="stylesheet" href="/wdd230/lesson_2/styles/small.css">
+    <link rel="stylesheet" href="/wdd230/lesson_2/styles/medium.css">
+    <link rel="stylesheet" href="/wdd230/lesson_2/styles/large.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;700&display=swap" >
 </head>
 
 
 <body>
     <header>
-        <h1 class="home-title">Design Principles Document</h1>
+        <h1>Design Principles</h1>
         <h2>Heather Noe Jasi</h2>
     </header>
-    <main>
 
+    <main>
         <section class="visual_column">
             <h3 class="vis_title">Visual Hierarchy</h3>
-            <h4>Honey Fashion and Accessories</h4>
-            <a href="https://www.honeyacc.co.za/">Honey Fashion</a>
-            <img class="img_vis" src="images2/Honey Acc.jpeg" alt="Visual Hierarchy">
+            <a href="https://www.honeyacc.co.za/">Honey Fashion  Accessories</a>
+            <img class="img_vis" src="images/Honey Acc.jpeg" alt="Visual Hierarchy">
             <p>Nielsen Norman Group noted that Summary: A clear visual hierarchy guides the eye to the most important elements on the page.
             It can be created through variations in color and contrast, scale, and grouping. A website with a good visual design
             allows the user to have a clear sense of direction. The eye is guided to consume each different elements. 
@@ -33,15 +32,13 @@
             makes use of color and contrast. The colors used grab attention. The use of lighter and darker colors balance each other.
             The title and the heading are in bold and lighter color grabing attention and the information is in smaller font size and darker. 
             The sizes of font provide enough variety to clearly see the headings and text content. The title is the largest, the headings are 
-            medium size and the text content is smaller. This keeps the hierarchical relationship well defined and clear. 
-    </p>
+            medium size and the text content is smaller. This keeps the hierarchical relationship well defined and clear. </p>
         </section>
 
         <section class="whitespace_column">
             <h3 class="wht_title">White Space and Clean Design</h3>
-            <h4>Water Works</h4>
             <a href="https://www.waterworks.com/us_en/">Water Works</a>
-            <img class="img_wht" src="images2/WaterWorks.jpeg" alt="White Space and Clean">
+            <img class="img_wht" src="images/WaterWorks.jpeg" alt="White Space and Clean">
             <p>White Space and Clean Design allows the design to breathe by reducing too much text and funstional elements that the user 
                 interacts with. The beauty of white space and clean design is that is make text to be clear and readable. It also guides
                 the eye. According to Nick Babich he noted that White space has a tremendous impact on how people comprehend information
@@ -49,15 +46,13 @@
                 The white space clearly brings our the beautiful design. The page is not too busy. We see the connection of the title and the 
                 headings. White space drive user's attention to a particular object. In this case, the website drives the user to pay attention 
                 to the images of the beautiful tub without having to worry about reading alot of text. In Water works website, there is use 
-                of two colours to achive a clean look of the page. The white and light grey give attention to the picture and text content.  
-            </p>
+                of two colours to achive a clean look of the page. The white and light grey give attention to the picture and text content. </p>
         </section>
 
         <section class="repetition_column">
             <h3 class="rep_title">Repetition</h3>
-            <h4>Family Dinners</h4>
             <a href="https://www.familydinners.com/">Family Dinners</a>
-            <img class="img_rep" src="images2/Family Dinners.jpeg" alt="Repetition">
+            <img class="img_rep" src="images/Family Dinners.jpeg" alt="Repetition">
             <p>Study.com highlights that the repetition principle of design means that the same or similar elements are used again. 
                 The principle of repetition in design is used to achieve consistency and uniqueness.It simply means that pictorial elements
                 are completely or partially reused. These can be the same or similar colors in the design,
@@ -65,8 +60,7 @@
                 The Family Dinners website makes of repetition, the pictures are the same size. The title of each picture 
                 is on the left side, written in capital letters with a grey background. There is consistance as the same font size, font style and 
                 image sizes are being reused. The colors used also show repetition, there is use of warm colors that match. The top website banner
-                has a similar color with the food on images used. That achieves consistency and uniqueness. 
-            </p>
+                has a similar color with the food on images used. That achieves consistency and uniqueness. </p>
         </section>
 
     </main>
@@ -76,6 +70,7 @@
         <span id="date"></span> 
     </footer>
 
-      <script src="scripts2/design.js"></script>
+      <script src="/wdd230/lesson_2/scripts/design.js"></script>
 
-</body></html>
+</body>
+</html>
