--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <meta name="description" content="This is Heather Jasi Assignment portal for WDD 230 course">
     <link rel="icon" type="image/png" href="Heather pic.jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -22,30 +21,27 @@
         <img src="images/Heather pic.jpeg" alt="Heather's Picture">
         <h1>Heather Noe Jasi</h1>
         </div> 
-
     </header>
 
     <main>
-        <section class="linklist">
             <h2>WDD 230: Assignment Portal</h2>
-            <div class="lesson-list">
-                <ul>
-                    <li>Lesson 1: <a href="https://codepen.io/nomazulu23/pen/abjVrXe"> Applied JavaScript</a></li>
-                    <li>Lesson 2: <a href="lesson_2/design-principles.html"> Design Principles</a></li>
-                    <li>Lesson 3: <a href="lesson_3/index_CoC_.html"> Chamber of Commerce </a></li>
-                    <li>Lesson 4: <a href="####"></a></li>
-                    <li>Lesson 5: <a href="####"></a></li>
-                    <li>Lesson 6: <a href="####"></a></li>
-                    <li>Lesson 7: <a href="####"></a></li>
-                    <li>Lesson 8: <a href="####"></a></li>
-                    <li>Lesson 9: <a href="####"></a></li>
-                    <li>Lesson 10: <a href="####"></a></li>
-                    <li>Lesson 11: <a href="####"></a></li>
-                </ul>
-            </div>
-        </section>
-       
+            <hr>
+            <ul>
+                <li>Lesson 1: <a href="https://codepen.io/nomazulu23/pen/abjVrXe"> Applied JavaScript</a></li>
+                <li>Lesson 2: <a href="lesson_2/design-principles.html"> Design Principles</a></li>
+                <li>Lesson 3: <a href="lesson_3/index.html"> Chamber of Commerce Site plan</a></li>
+                <li>Lesson 4: <a href="chamber/index.html">Chamber of Commerce Website</a></li>
+                <li>Lesson 5: <a href="lesson_5/bom.html">The Book of Mormon</a></li>
+                <li>Lesson 6: <a href="chamber/index.html">Responsive Designs</a>
+                <li>Lesson 7: <a href="lesson_7/lazyload.html">Lazy Load</a> and <a href="chamber/discover.html">Discover Chamber Page</a></li>
+                <li>Lesson 8: <a href="lesson_8/tablebuild.html">Table Build</a> and <a href="chamber/join.html">Join Chamber Page</a></li>
+                <li>Lesson 9: <a href="lesson_9/prophets.html"> Latter-Day Prophets </a> and <a href="chamber/directory.html">Directory Chamber Page </a></li>
+                <li>Lesson 10: <a href="####"></a></li>
+                <li>Lesson 11: <a href="####"></a></li>
+            </ul>       
     </main>
+
+    <hr>
 
     <footer> 
         <p>&copy;<span id="year"></span> .:|:. Heather Jasi .:|:. Lublin 
@@ -59,3 +55,4 @@
 
 
 </html>
+
