--- a/lesson_3/target-audience.html
+++ b/lesson_3/target-audience.html
@@ -4,10 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Target Audience</title>
     <meta name="description" content="Target Audience of the Nurse Care Chamber of Commerce">
-    <link href="../lesson_3/styles3_CoC/cOc_normalize.css" rel="stylesheet">
-    <link href="../lesson_3/styles3_CoC/cOc_main3.css" rel="stylesheet">
-    <link href="../lesson_3/styles3_CoC/cOc_medium.css" rel="stylesheet">
-    <link href="../lesson_3/styles3_CoC/cOc_design.css" rel="stylesheet">
+    <link href="../lesson_3/styles/normalize.css" rel="stylesheet">
+    <link href="../lesson_3/styles/main.css" rel="stylesheet">
+    <link href="../lesson_3/styles/medium.css" rel="stylesheet">
+    <link href="../lesson_3/styles/design.css"stylesheet">
+    <link href="../lesson_3/styles/small.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
@@ -16,16 +17,16 @@
 <body>
     <header>
         <div class="logo">
-        <img src="../lesson_3/images3_CoC/Nurse Care logo.jpeg" alt="Nurse Care Chamber of Commerce Logo">
+        <img src="../lesson_3/images/Nurse Care logo.jpeg" alt="Nurse Care Chamber of Commerce Logo">
         </div>
         <h1>Nurse Care Chamber of Commerce</h1>
     </header>
 
     <nav>
         <ul>
-            <li><a href="./index_CoC_.html">Home</a></li>
-            <li><a href="./target-audience_CoC_.html" class="active">Target Audience</a></li>
-            <li><a href="./design_CoC_.html">Design</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./target-audience.html" class="active">Target Audience</a></li>
+            <li><a href="./design.html">Design</a></li>
         </ul>
     </nav>
     
@@ -73,7 +74,7 @@
     <span id="date"></span> </p>
 </footer>
 
-<script src="../lesson_3/script3_CoC/cOc.js"></script>
+<script src="../lesson_3/script/script.js"></script>
 
 </body>
 
