--- a/lesson_7/lazyload.html
+++ b/lesson_7/lazyload.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html lang = "en-US">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewpoint" content="width=device-width, initial-scale=1.0, viewpoint-fit-cover">
-    <title> Progessive Loading of Images</title>
-    <meta name="description" content="This is a site to illustrate progressive loading of images">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1 viewpoint-fit-cover">
+    <title>Lazy Loading Images</title>
+    <meta name="description" content="lazy loading page.">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="/wdd230/lesson_7/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<h1> Progressive Loading of Images and Placeholders</h1>
+<body> 
+    <header> 
+        <h1>Lazy Loading Images</h1>
+    </header>
 
-<img
+    <main>
+        <img src="images/placeholder.jpeg" data-src="images/Ladie Surfing.jpeg" alt="Image of Lading Surfing deep in the water">
+        <img src="images/placeholder.jpeg" data-src="images/tiger.jpeg" alt="Beautiful Tiger Image">
+        <img src="images/placeholder.jpeg" data-src="images/Night Stars.jpeg" alt="Stars shinning at Night">
+        <img src="images/placeholder.jpeg" data-src="images/Cub and baby monkey.jpeg" alt="Baby monkey on the back of a cub">
+        <img src="images/placeholder.jpeg" data-src="images/penguins.jpeg" alt="Penguins jumping into the water">
+        <img src="images/placeholder.jpeg" data-src="images/Ice Island.jpeg" alt="Ice Island in the ocean">
+    </main>
+            
+    <footer>
+        <p>&copy;<span id="year"></span> .:|:. Heather Jasi .:|:. Lublin 
+        <br>
+        <span id="date"></span></p>
+    </footer>
+
+    <script src="/wdd230/lesson_7/date.js"></script>  
+    <script src="/wdd230/lesson_7/script.js"></script> 
+
+</body>
+
+</html>
+
