--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -40,9 +40,8 @@
             <span id="get_date"></span>
         </div>
 
-        <main>
-            <p> Please call us at : 0000000000000</p>
-
+        <main class="thanks">
+            <p> Thank you for joining us. We will get back at the end of the day today. Good day</p>
         </main>
 
         <footer>
