--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li>Lesson 7: <a href="lesson_7/lazyload.html">Lazy Load</a> and <a href="chamber/discover.html">Discover Chamber Page</a></li>
                 <li>Lesson 8: <a href="lesson_8/tablebuild.html">Table Build</a> and <a href="chamber/join.html">Join Chamber Page</a></li>
                 <li>Lesson 9: <a href="lesson_9/prophets.html"> Latter-Day Prophets </a> and <a href="chamber/directory.html">Directory Chamber Page </a></li>
-                <li>Lesson 10: <a href="####"></a></li>
+                <li>Lesson 10: <a href="lesson_10/weather.html"> Weather API</a></li>
                 <li>Lesson 11: <a href="####"></a></li>
             </ul>       
     </main>
