--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -49,7 +49,8 @@
                     <h1>Lublin City</h1>
                     <h2>Welcome to the city of Lublin</h2>
                     <p> Lublin is the largest city in Eastern Poland, and the capital of the Voivodship (province) of Lublin; it is the ‘Gateway of the European Union into the East’, the capital of Eastern Poland.
-                    <hr> Population: 341 722 <br> Population density: 2317 people/km^2 <br> Economic data: 43 000 registered companies</p>
+                    <hr> 
+                    <p> Population: 341 722 <br> Population density: 2317 people/km^2 <br> Economic data: 43 000 registered companies</p>
                 </div>
                 
                 
@@ -61,7 +62,7 @@
                 </div>
 
                 <div class="picture">
-                    <img " src="/wdd230/chamber/images/discover_images/placeholder.jpeg" data-src="/wdd230/chamber/images/discover_images/grandhotel.jpeg"  alt="Grandhotel in Lublin">    
+                    <img src="/wdd230/chamber/images/discover_images/placeholder.jpeg" data-src="/wdd230/chamber/images/discover_images/grandhotel.jpeg"  alt="Grandhotel in Lublin">    
                     <p > IBB Hotel Grand Hotel Lublin is a hundred-year-old, beautifully renovated building right in the heart of Lublin. 
                         Its unique atmosphere is created by meticulously restored architectural details and the noble interior design of the Belle Epoque. 
                         The convenient location of the hotel, beautiful interiors and the professional service are certainly a guarantee of an unforgettable experience. </p>
