--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0, viewpoint-fit-cover">
     <title> Heather Jasi Assignment Portal</title>
     <meta name="description" content="This is Heather Jasi Assignment portal for WDD 230 course">
-    <link rel="icon" type="image/png" href="Heather pic.jpeg">
+    <link rel="icon" type="image/png" href="heather.jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div class="banner">
-        <img src="images/Heather pic.jpeg" alt="Heather's Picture">
+        <img src="images/heather.jpeg" alt="Heather's Picture">
         <h1>Heather Noe Jasi</h1>
         </div> 
     </header>
@@ -37,7 +37,8 @@
                 <li>Lesson 8: <a href="lesson_8/tablebuild.html">Table Build</a> and <a href="chamber/join.html">Join Chamber Page</a></li>
                 <li>Lesson 9: <a href="lesson_9/prophets.html"> Latter-Day Prophets </a> and <a href="chamber/directory.html">Directory Chamber Page </a></li>
                 <li>Lesson 10: <a href="lesson_10/weather.html"> Weather API</a></li>
-                <li>Lesson 11: <a href="####"></a></li>
+                <li>Lesson 11: <a href="chamber/index.html">Chamber of Commerce Website</a></li>
+        
             </ul>       
     </main>
 
