--- a/chamber/join.html
+++ b/chamber/join.html
@@ -152,9 +152,9 @@
                     </div>
 
                     <div>
-                        <p class=>info@nursescarelublin.or</p>
-                        <p class=>+48 792 654 346</p>
-                        <p class=><a style="color: #e4d9c4;" href="https://www.google.com/maps/place/Muzyczna+7,+20-612+Lublin/@51.2379706,22.5519314,17z/data=!3m1!4b1!4m5!3m4!1s0x47225771a3c6aae7:0xede1f23373f82be!8m2!3d51.2379673!4d22.5541201">📍 Location Map</a></p>
+                        <p>info@nursescarelublin.or</p>
+                        <p>+48 792 654 346</p>
+                        <p><a style="color: #e4d9c4;" href="https://www.google.com/maps/place/Muzyczna+7,+20-612+Lublin/@51.2379706,22.5519314,17z/data=!3m1!4b1!4m5!3m4!1s0x47225771a3c6aae7:0xede1f23373f82be!8m2!3d51.2379673!4d22.5541201">📍 Location Map</a></p>
                     </div>
                 </div>
 
