--- a/lesson_3/index.html
+++ b/lesson_3/index.html
@@ -31,7 +31,8 @@
     <main>
         
         <h2>Site Purpose</h2>
-        <p> Nurse Care Chamber of commerce is a group of Medical institutions who work together to link medical personnel in Lublin, Poland with opportunities around the world..</p>
+        <p> Nurse Care Chamber of commerce is a group of Medical institutions who work together to 
+            link medical personnel in Lublin, Poland with opportunities around the world..</p>
         
         <h2>Site Logo</h2>
         <img class="logo" src="../lesson_3/images/Nurse Care logo.jpeg" alt="Nurse Care Chamber of Commerce Logo">
