--- a/bountiful.foods/index.html
+++ b/bountiful.foods/index.html
@@ -66,7 +66,16 @@
             </div>
 
             <div class="weather">
-                <h2> Weather</h2>
+                <section id="weather">
+                    <h3>Weather</h3>
+                    <p class="temperature"><span id="current-temp"></span>°F</p>
+                    <hr>
+                    <p id="status"></p>
+                    <p id="wind-speed">
+                    Wind Speed: <span class="wind-speed"></span><span> mph</span>
+                    </p>
+                    <p id="wind-chill">Wind Chill: <span class="wind-chill"></span></p>
+                </section>
             </div>
 
             <div class="balboa">
@@ -94,7 +103,7 @@
                 <span id="date"></span></p>
         </footer>
 
-        <script src="/wdd230/bountiful.foods/script.js" async defer></script>
+        <script src="/wdd230/bountiful.foods/script.js"> </script>
        
     </body>
 </html>       
