--- a/bountiful.foods/index.html
+++ b/bountiful.foods/index.html
@@ -70,7 +70,7 @@
                     <h3>Weather</h3>
                     <p class="temperature"><span id="current-temp"></span>°F</p>
                     <hr>
-                    <p id="status"></p>
+                    <p id="caption"></p>
                     <p id="wind-speed">
                     Wind Speed: <span class="wind-speed"></span><span> mph</span>
                     </p>
