--- a/bountiful.foods/fresh.html
+++ b/bountiful.foods/fresh.html
@@ -57,10 +57,7 @@
                         <label>Select Fruits
                         <select>
                             <option value=""> Please Select </option>
-                            <option>1</option>
-                            <option>2</option>
-                            <option>3</option>
-                            <option>4</option>
+                            <option><div class="cards"></div></option>
                         </select>
                         </label>
 
