--- a/bountiful.foods/index.html
+++ b/bountiful.foods/index.html
@@ -44,7 +44,6 @@
         </header>
 
 
-
         <main class="container">
 
             <div class="fruit_shop">
@@ -52,17 +51,17 @@
                 <picture>
                     <source media="(max-width: 800px)" srcset="/wdd230/bountiful.foods/images/shop2.jpg.">
                     <source media="(max-width: 1200px)" srcset="/wdd230/bountiful.foods/images/shop2.jpg">
-                    <img src="/wdd230/bountiful.foods/images/shop2.jpg" alt="Fruits">
+                    <img src="/wdd230/bountiful.foods/images/placeholder.jpg" data-src="/wdd230/bountiful.foods/images/shop2.jpg" alt="Fruits">
                 </picture>
                 <button class="buybtn"> Buy Now!</button>
             </div>
 
             <div class="fresh_fruits">
                 <h2> Fresh Fruits</h2>
-                <img class="order" src="/wdd230/bountiful.foods/images/berries.jpg">
-                <img class="fresh" src="/wdd230/bountiful.foods/images/combo.jpg">
-                <img class="shop" src="/wdd230/bountiful.foods/images/juices.jpg">
-                <img src="/wdd230/bountiful.foods/images/juicyfruits.jpg" alt="">
+                <img src="/wdd230/bountiful.foods/images/placeholder.jpg" data-src="/wdd230/bountiful.foods/images/berries.jpg" alt="Berries">
+                <img src="/wdd230/bountiful.foods/images/placeholder.jpg" data-src="/wdd230/bountiful.foods/images/combo.jpg" alt="Combination of fresh fruits">
+                <img src="/wdd230/bountiful.foods/images/placeholder.jpg" data-src="/wdd230/bountiful.foods/images/juices.jpg" alt="Fruit Juices">
+                <img src="/wdd230/bountiful.foods/images/placeholder.jpg" data-src="/wdd230/bountiful.foods/images/juicyfruits.jpg" alt="Combination of fruits">
             </div>
 
             <div class="weather">
