--- a/bountiful.foods/fresh.html
+++ b/bountiful.foods/fresh.html
@@ -22,8 +22,8 @@
             </div>
 
 
-            <!-- <button id="menuButton">&#9776;</button> -->
-            <nav class="main_nav">  
+            <button id="menuButton">&#9776;</button>
+            <nav id="main_nav">  
                 <ul>  
                     <li class = "active"><a href="index.html"><p>Home</p></a></li>
                     <li><a href="/wdd230/bountiful.foods/fresh.html"><p>Fresh</p></a></li>
@@ -32,10 +32,10 @@
             </nav>  
 
             <ul class="socialmedia">
-                <li><a href="https://www.facebook.com/"><img id ="social_icon" src="/wdd230/bountiful.foods/images/facebook...jpg" alt="Facebook"></a></li>
-                <li><a href="https://www.instagram.com/"><img id ="social_icon" src="/wdd230/bountiful.foods/images/instagram.png"  alt="Instagram"></a></li>
-                <li><a href="https://www.whatsapp.com/"><img id ="social_icon" src="/wdd230/bountiful.foods/images/whatsApp.png"  alt="WhatsApp"></a></li>
-                <li><a href="https://www.pinterest.com/"><img id ="social_icon" src="/wdd230/bountiful.foods/images/pinterest.png"  alt="WhatsApp"></a></li>
+                <li><a href="https://www.facebook.com/"><img class="social_icon" src="/wdd230/bountiful.foods/images/facebook...jpg" alt="Facebook"></a></li>
+                <li><a href="https://www.instagram.com/"><img class="social_icon" src="/wdd230/bountiful.foods/images/instagram.png"  alt="Instagram"></a></li>
+                <li><a href="https://www.whatsapp.com/"><img class ="social_icon" src="/wdd230/bountiful.foods/images/whatsApp.png"  alt="WhatsApp"></a></li>
+                <li><a href="https://www.pinterest.com/"><img class ="social_icon" src="/wdd230/bountiful.foods/images/pinterest.png"  alt="WhatsApp"></a></li>
             </ul>
 
             <div class="date">
