--- a/bountiful.foods/index.html
+++ b/bountiful.foods/index.html
@@ -22,9 +22,10 @@
             </div>
 
 
-            <!-- <button id="menuButton">&#9776;</button> -->
-            <nav class="main_nav">  
-                <ul>  
+            
+            <nav class="navigation"> 
+                <button id="menuButton"><span>&#9776;</span><span>X</span></button> 
+                <ul id="main_nav">  
                     <li class = "active"><a href="index.html"><p>Home</p></a></li>
                     <li><a href="/wdd230/bountiful.foods/fresh.html"><p>Fresh</p></a></li>
                     <li><a href="/wdd230/bountiful.foods/aboutus.html"><p >About Us</p></a></li>
@@ -32,10 +33,10 @@
             </nav>  
 
             <ul class="socialmedia">
-                <li><a href="https://www.facebook.com/"><img id ="social_icon" src="/wdd230/bountiful.foods/images/facebook...jpg" alt="Facebook"></a></li>
-                <li><a href="https://www.instagram.com/"><img id ="social_icon" src="/wdd230/bountiful.foods/images/instagram.png"  alt="Instagram"></a></li>
-                <li><a href="https://www.whatsapp.com/"><img id ="social_icon" src="/wdd230/bountiful.foods/images/whatsApp.png"  alt="WhatsApp"></a></li>
-                <li><a href="https://www.pinterest.com/"><img id ="social_icon" src="/wdd230/bountiful.foods/images/pinterest.png"  alt="WhatsApp"></a></li>
+                <li><a href="https://www.facebook.com/"><img class="social_icon" src="/wdd230/bountiful.foods/images/facebook...jpg" alt="Facebook"></a></li>
+                <li><a href="https://www.instagram.com/"><img class="social_icon" src="/wdd230/bountiful.foods/images/instagram.png"  alt="Instagram"></a></li>
+                <li><a href="https://www.whatsapp.com/"><img class ="social_icon" src="/wdd230/bountiful.foods/images/whatsApp.png"  alt="WhatsApp"></a></li>
+                <li><a href="https://www.pinterest.com/"><img class ="social_icon" src="/wdd230/bountiful.foods/images/pinterest.png"  alt="WhatsApp"></a></li>
             </ul>
 
             <div class="date">
@@ -51,7 +52,7 @@
                 <picture>
                     <source media="(max-width: 800px)" srcset="/wdd230/bountiful.foods/images/shop2.jpg.">
                     <source media="(max-width: 1200px)" srcset="/wdd230/bountiful.foods/images/shop2.jpg">
-                    <img src="/wdd230/bountiful.foods/images/placeholder.jpg" data-src="/wdd230/bountiful.foods/images/shop2.jpg" alt="Fruits">
+                    <img src="/wdd230/bountiful.foods/images/shop2.jpg" alt="Fruits">
                 </picture>
                 <button class="buybtn"> Buy Now!</button>
             </div>
